--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <header class="header">
     <h3 class="h3">Fahad Ali</h3>
     <nav class="navbar">
-      <a href="about.html">About</a>
-      <a href="projects.html" title="To Be Added Soon">Projects</a>
-      <a href="https://hashnode.com/@fahadware" target="_blank">Blog</a>
+      <a href="about.html"><span class="hover-underline">About</span></a>
+      <a href="projects.html" title="To Be Added Soon"><span class="hover-underline">Projects</span></a>
+      <a href="https://hashnode.com/@fahadware" target="_blank"><span class="hover-underline">Blog</span></a>
     </nav>
     <div class="hamburger" onclick="toggleSidebar()">
       <i class="fas fa-bars"></i>
@@ -26,9 +26,9 @@
     <div class="close-btn" onclick="toggleSidebar()">
       <i class="fas fa-times"></i>
     </div>
-    <a href="about.html">About</a>
-    <a href="projects.html">Projects</a>
-    <a href="https://hashnode.com/@fahadware" target="_blank">Blog</a>
+    <a href="about.html"><span class="hover-underline">About</span></a>
+    <a href="projects.html"><span class="hover-underline">Projects</span></a>
+    <a href="https://hashnode.com/@fahadware" target="_blank"><span class="hover-underline">Blog</span></a>
   </div>
   
 
@@ -42,8 +42,9 @@
       <a href="mailto:sohaibkkal@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
       <br>
       <br>
-      <a href="https://drive.google.com/drive/folders/1KjamgNXXO_cOx3Mis_CDFXUn3AcdYycW?usp=sharing" download class="download-btn">
+      <a href="https://drive.google.com/drive/folders/1KjamgNXXO_cOx3Mis_CDFXUn3AcdYycW?usp=sharing" download class="download-btn magnetic" id="downloadCvBtn">
         <i class="fas fa-download"></i> Download CV
+        <div class="particles-field" id="particleFieldCv"></div>
       </a>
       
 
@@ -57,3 +58,4 @@
   <script src="main.js"></script>
 </body>
 </html>
+
