--- a/index.html
+++ b/index.html
@@ -33,13 +33,16 @@
   
 
   <main class="container">
-    <img src="./fahad.jpeg" class="circle-img" alt="Fahad's Photo">
+    <div class="avatar-ring">
+  <img class="circle-img" src="fahad.jpeg" alt="profile" />
+</div>
+
     <h1>Fahad Ali</h1>
     <p class="tagline" id="tagline"></p>
     <div class="social-icons">
-      <a href="https://github.com/fahadware" target="_blank"><i class="fab fa-github"></i></a>
-      <a href="https://www.linkedin.com/in/fahad-ali-3a2128313/" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="mailto:sohaibkkal@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
+      <a href="https://github.com/fahadware" target="_blank"><i class="fab fa-github icon"></i></a>
+      <a href="https://www.linkedin.com/in/fahad-ali-3a2128313/" target="_blank"><i class="fab fa-linkedin icon"></i></a>
+      <a href="mailto:sohaibkkal@gmail.com" target="_blank"><i class="fas fa-envelope icon"></i></a>
       <br>
       <br>
       <a href="https://drive.google.com/drive/folders/1KjamgNXXO_cOx3Mis_CDFXUn3AcdYycW?usp=sharing" download class="download-btn magnetic" id="downloadCvBtn">
@@ -57,5 +60,7 @@
 
   <script src="main.js"></script>
 </body>
+</html>
+
 </html>
 
