--- a/about.html
+++ b/about.html
@@ -4,21 +4,37 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About Fahad</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="about.css" />
 </head>
 <body>
   <div class="card">
-    <h1>About Me</h1>
-    <p>I’m Fahad, currently Persuing Bachelor of Computer Science at FAST-NUCES, and an aspiring Full-Stack Engineer passionate about building powerful, real-world web applications using the MERN stack (MongoDB, Express, React, Node.js). 💻</p>
-    <p>I’m following a roadmap that’s shaping me step by step:
-    Starting with MERN development → growing into DevOps for automation, CI/CD, and cloud systems → and ultimately aiming to integrate AI/ML into the products I build.</p>
-    <p> As I explore Artificial Intelligence and Machine Learning, my goal is to combine smart algorithms with full-stack development to build intelligent, efficient, and scalable solutions that can solve real-world problems.</p>
-    <p>I’m currently focused on both frontend and backend development, learning how to manage servers, APIs, and databases — while also getting hands-on with tools like Git and cloud platforms.</p>
-    <p> With a passion for design and code, I enjoy creating user-friendly interfaces and smooth user experiences that not only look good but work great.</p>
-    <p>⚙️ Tools I work with: React, Tailwind CSS, Node.js, MongoDB, Git, GitHub, REST APIs</p>
-    <p>🌐 Exploring how to bridge development, deployment, and intelligence through AI/ML integration.</p>
-    <p>Let’s connect and collaborate! I'm always excited to work on new ideas, solve interesting problems, and grow with like-minded people in tech.</p>
-    <p><em>“Every expert was once a beginner.” — Taking one step at a time and enjoying the process.</em></p>
+    <div class="avatar-ring" style="display:flex;justify-content:center;align-items:center;margin-bottom:24px;">
+      <img src="fahad.jpeg" alt="Fahad's Profile Picture" class="circle-img">
+    </div>
+    <div class="tagline" style="text-align:center;font-size:1.3rem;font-weight:600;color:#f4d03f;letter-spacing:1px;margin-bottom:10px;font-family:'Inter',sans-serif;">Next-Gen Full Stack Engineer | Web Dev × AI</div>
+    <div style="text-align:center;font-size:1rem;color:#e7e6e3;opacity:0.7;margin-top:10px;margin-bottom:24px;font-style:italic;">(in progress)</div>
+    <p>Hey! I'm Fahad, a Computer Science student at FAST-NUCES and an aspiring next-gen Full Stack Engineer — wait...<br>
+     Next-gen? What’s that even mean?<br>
+     It’s not just some fancy label.<br>
+     <b>"Next-gen" means thinking beyond traditional development.</b><br>
+     It’s about building apps that are not just functional… but future-ready.<br>
+     Apps that are intelligent, automated, scalable, and actually solve real-world problems.</p>
+     <p>Right now, I’m focused on learning the MERN stack — MongoDB, Express.js, React, and Node.js — to build full web applications from scratch.<br>
+     But here’s where the “next-gen” mindset kicks in:<br>
+     I’m not just writing code — I’m learning how to automate deployments with GitHub Actions<br>
+     Not just designing UIs — but crafting them with React + Tailwind CSS for clean, responsive design<br>
+     Not just building features — but planning to add AI to make them smarter over time</p>
+     <p><b>My roadmap :</b><br>
+     ➡️ Master the MERN stack<br>
+     ➡️ Dive into DevOps — CI/CD, cloud, and automation<br>
+     ➡️ Step into AI/ML — to build apps that think, adapt, and grow</p>
+     <p>I’m also a vibe coder. Good music + good tools = pure flow.<br>
+     Most of my projects are AI-assisted — because I believe in working smart, not just hard<br>
+     I learn by doing. I build by exploring. And I’m here to create things that aren’t just modern… but next-gen.</p>
+     <p>Still learning. step by step  Still building....</p>
   </div>
 </body>
 </html>
