--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 
   <link rel="stylesheet" href="port.css" />
+  
+  <script
+    src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.6.2/dist/dotlottie-wc.js"
+    type="module"
+  ></script>
 </head>
 <body>
   <header class="header">
@@ -45,14 +50,52 @@
       <a href="mailto:sohaibkkal@gmail.com" target="_blank"><i class="fas fa-envelope icon"></i></a>
       <br>
       <br>
-      <a href="https://drive.google.com/drive/folders/1KjamgNXXO_cOx3Mis_CDFXUn3AcdYycW?usp=sharing" download class="download-btn magnetic" id="downloadCvBtn">
-        <i class="fas fa-download"></i> Download CV
-        <div class="particles-field" id="particleFieldCv"></div>
-      </a>
+      <div class="cv-button-container">
+        <a href="https://drive.google.com/drive/folders/1KjamgNXXO_cOx3Mis_CDFXUn3AcdYycW?usp=sharing" download class="download-btn magnetic" id="downloadCvBtn">
+          <i class="fas fa-download"></i> Download CV
+          <div class="particles-field" id="particleFieldCv"></div>
+        </a>
+        <!-- Lottie Robot Animation behind CV button -->
+        <div class="robot-container" id="robotContainer">
+          <dotlottie-wc
+            src="https://lottie.host/5203c9d3-fc50-4d89-8bfb-a0c543639b7f/zMjEw9CSE2.lottie"
+            style="width: 120px; height: 120px;"
+            speed="1"
+            autoplay
+            loop
+          ></dotlottie-wc>
+        </div>
+      </div>
       
 
     </div>
   </main>
+
+  <!-- 3D Robot Character -->
+  <div class="robot-container" id="robotContainer">
+    <div class="robot">
+      <div class="robot-head">
+        <div class="robot-eye left-eye"></div>
+        <div class="robot-eye right-eye"></div>
+        <div class="robot-mouth"></div>
+      </div>
+      <div class="robot-body">
+        <div class="robot-arm left-arm">
+          <div class="robot-hand left-hand"></div>
+        </div>
+        <div class="robot-arm right-arm">
+          <div class="robot-hand right-hand"></div>
+        </div>
+        <div class="robot-chest">
+          <div class="robot-light"></div>
+        </div>
+      </div>
+      <div class="robot-legs">
+        <div class="robot-leg left-leg"></div>
+        <div class="robot-leg right-leg"></div>
+      </div>
+    </div>
+  </div>
 
   <footer class="footer">
     <p>© 2025 Fahad Ali. All Rights Reserved.</p>
@@ -61,6 +104,3 @@
   <script src="main.js"></script>
 </body>
 </html>
-
-</html>
-
