--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="card">
-    <h1>Projects Coming Soon...</h1>
+    <h1>Projects Will be Added soon!</h1>
 
     <p>“Every expert was once a beginner.” — Taking one step at a time and enjoying the process</p>
   </div>
